--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "react": "^16.8.6",
-    "reactstrap": "^8.4.1"
+    "reactstrap": "^8.4.1",
+    "react-widgets": "^4.5.0"
   }
 }
