--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "react": "^16.8.6",
+    "react-widgets": "^4.5.0",
     "reactstrap": "^8.4.1",
-    "react-widgets": "^4.5.0"
+    "sweetalert2": "^10.6.1"
   }
 }
