--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   },
   "dependencies": {
     "bootstrap": "^4.4.1",
+    "file-loader": "^6.2.0",
     "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-widgets": "^4.5.0",
     "reactstrap": "^8.4.1",
-    "sweetalert2": "^10.6.1"
+    "sweetalert2": "^10.6.1",
+    "url-loader": "^4.1.1"
   }
 }
